# libuio

./: .gitignore  AUTHORS  ChangeLog-from-git  Doxyfile.in  Makefile.am  README  attr.c  autogen.sh  base.c  configure.ac  handling.c  helper.c  irq.c  lgpl21.texinfo  libUIO-uninstalled.pc.in  libUIO.c  libUIO.dox.in  libUIO.h  libUIO.pc.in  libUIO_internal.h  libuio-uninstalled.pc.in  libuio.h  libuio.pc.in  libuio_internal.h  lsuio.1  lsuio.c  lsuio.texi  lsuio.texinfo  mem.c  readuio.c
debian/: changelog  control  copyright  libuio1.symbols  rules
doc/: libuio.dox.in  lsuio.texi
po/: .gitignore  Makevars  POTFILES.in
src/: Makefile.am  attr.c  base.c  helper.c  libUIO.c  libUIO.h  libuio.h  libuio_internal.h  lsuio.c  mem.c  readuio.c
